docs: Update CLAUDE.md with JDK 25 and act testing notes
Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>